kubernetes/services/kiwix/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: kiwix
  labels:
    name: kiwix
    type: content
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
